--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.5",
     "xlsx": "^0.18.5"
