--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/inter": "^5.0.17",
     "@fontsource/poppins": "^5.0.8",
     "@fontsource/press-start-2p": "^5.0.18",
     "@mui/icons-material": "^5.15.10",
@@ -19,9 +20,11 @@
     "@mui/x-charts": "^6.19.4",
     "@mui/x-data-grid": "^6.19.4",
     "@mui/x-tree-view": "^6.17.0",
+    "@nextui-org/react": "^2.2.10",
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.0.12",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "papaparse": "^5.4.1",
