--- a/.env.local
+++ b/.env.local
@@ -12,3 +12,5 @@ VITE_IP_API_LOGIN=http://10.17.66.242:3031/smart_e_working_user
 VITE_smart_jv_parameter_calling=/smart_e_working/e_working_verify/smart_jv_parameter_calling
 
 # `${import.meta.env.VITE_IP_API}${import.meta.env.VITE_smart_jv_parameter_calling}``
+
+VITE_IP_API_E_WORKING=http://10.17.66.242:7010
