--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^6.19.4",
     "@mui/x-tree-view": "^6.17.0",
     "@nextui-org/react": "^2.2.10",
+    "@reduxjs/toolkit": "^2.2.2",
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "file-saver": "^2.0.5",
@@ -32,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
